@@ -1,3 +1,5 @@
+Jun 24 2008 neel
+* Add -x option for fenxi styled output (see http://fenxi.dev.java.net)
 Jun 4 2008
 * Add UDP Tx throttling
 Feb 26 2008
